# rskit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
examples/full/: .env.example  .gitignore  Cargo.toml  Dockerfile  justfile
examples/full/config/: development.yaml  production.yaml
examples/full/src/: config.rs  main.rs
examples/full/templates/: home.html
examples/jobs/: Cargo.toml
examples/jobs/src/: config.rs  handlers.rs  main.rs
examples/sse-chat/: Cargo.toml
examples/sse-chat/config/: development.yaml
examples/sse-chat/src/: chat.rs  config.rs  handlers_auth.rs  main.rs
examples/sse-chat/static/: chat.js  style.css
examples/sse-dashboard/: Cargo.toml
examples/sse-dashboard/config/: development.yaml
examples/sse-dashboard/src/: config.rs  handlers.rs  main.rs  monitor.rs  types.rs
examples/sse-dashboard/static/: style.css
examples/todo-api/: Cargo.toml
examples/todo-api/config/: development.yaml
examples/todo-api/src/: config.rs  entity.rs  handlers.rs  main.rs  types.rs
examples/upload/: Cargo.toml
examples/upload/src/: config.rs  handlers.rs  main.rs  types.rs
modo/: Cargo.toml  README.md
modo-auth/: Cargo.toml  README.md
modo-auth/src/: cache.rs  context_layer.rs  extractor.rs  lib.rs  password.rs  provider.rs
modo-auth/tests/: integration.rs
modo-cli/: Cargo.toml  README.md
modo-cli/src/: main.rs  scaffold.rs  templates.rs
modo-cli/templates/api/: .env.jinja  Cargo.toml.jinja  docker-compose.yaml.jinja  justfile.jinja
modo-cli/templates/minimal/: .env.jinja  Cargo.toml.jinja  justfile.jinja
modo-cli/templates/shared/: .gitignore.jinja  CLAUDE.md.jinja
modo-cli/templates/web/: .env.example.jinja  .env.jinja  Cargo.toml.jinja  docker-compose.yaml.jinja  justfile.jinja
modo-cli/templates/worker/: .env.example.jinja  .env.jinja  Cargo.toml.jinja  justfile.jinja
modo-cli/tests/: scaffold_test.rs
modo-csrf/: Cargo.toml
modo-csrf/src/: config.rs  lib.rs  middleware.rs  template.rs  token.rs
modo-db/: Cargo.toml  README.md
modo-db-macros/: Cargo.toml  README.md
modo-db-macros/src/: entity.rs  lib.rs  migration.rs
modo-db-macros/tests/ui/: missing_table_attr.rs  missing_table_attr.stderr
modo-db/src/: config.rs  connect.rs  entity.rs  error.rs  extractor.rs  helpers.rs  hooks.rs  id.rs  lib.rs  migration.rs  pagination.rs  pool.rs  query.rs  record.rs  sync.rs
modo-db/tests/: concurrent_writes.rs  config.rs  connect.rs  entity_macro.rs  error_conversion.rs  hooks.rs  id.rs  migration_macro.rs  pagination.rs  pool.rs  record_trait.rs  soft_delete.rs
modo-email/: Cargo.toml  README.md
modo-email/src/: config.rs  factory.rs  lib.rs  mailer.rs  message.rs
modo-email/src/template/: cached.rs  email_template.rs  filesystem.rs  layout.rs  markdown.rs  mod.rs  vars.rs
modo-email/src/transport/: factory.rs  mod.rs  resend.rs  smtp.rs  trait_def.rs
modo-email/tests/: integration.rs  smtp_e2e.rs
modo-i18n/: Cargo.toml
modo-i18n/src/: config.rs  entry.rs  error.rs  extractor.rs  lib.rs  middleware.rs  store.rs  template.rs
modo-jobs/: Cargo.toml  README.md
modo-jobs-macros/: Cargo.toml  README.md
modo-jobs-macros/src/: job.rs  lib.rs
modo-jobs-macros/tests/ui/: not_async.rs  not_async.stderr
modo-jobs/src/: config.rs  cron.rs  entity.rs  extractor.rs  handler.rs  lib.rs  queue.rs  runner.rs  types.rs
modo-jobs/tests/: cleanup_loop.rs  concurrent_claims.rs  concurrent_stress.rs  config.rs  cron_system.rs  entity.rs  queue.rs  runner.rs  stale_reaper.rs  types.rs
modo-macros/: Cargo.toml  README.md
modo-macros/src/: error_handler.rs  handler.rs  lib.rs  main_macro.rs  middleware.rs  module.rs  sanitize.rs  t_macro.rs  template_filter.rs  template_function.rs  utils.rs  validate.rs  view.rs
modo-session/: Cargo.toml  README.md
modo-session/src/: cleanup.rs  config.rs  entity.rs  lib.rs  manager.rs  meta.rs  middleware.rs  store.rs  types.rs
modo-session/tests/: concurrent_sessions.rs  cross_user_revocation.rs  fingerprint_mismatch.rs  integration.rs  max_sessions_zero.rs
modo-sqlite/: Cargo.toml  README.md
modo-sqlite-macros/: Cargo.toml  README.md
modo-sqlite-macros/src/: lib.rs
modo-sqlite/src/: config.rs  connect.rs  error.rs  extractor.rs  id.rs  lib.rs  migration.rs  pool.rs
modo-sqlite/tests/: config.rs  connect.rs  error.rs  migration.rs
modo-templates/: Cargo.toml
modo-templates/src/: config.rs  context.rs  engine.rs  error.rs  lib.rs  middleware.rs  render.rs
modo-templates/tests/: context_layer.rs  render_layer.rs
modo-tenant/: Cargo.toml  README.md
modo-tenant/src/: cache.rs  context_layer.rs  extractor.rs  guard.rs  lib.rs  member.rs  resolver.rs
modo-upload/: Cargo.toml  README.md
modo-upload-macros/: Cargo.toml  README.md
modo-upload-macros/src/: from_multipart.rs  lib.rs
modo-upload/src/: config.rs  extractor.rs  file.rs  from_multipart.rs  lib.rs  stream.rs  validate.rs
modo-upload/tests/: config.rs  from_multipart.rs  local_storage.rs  max_payload.rs  stream.rs
modo/src/: app.rs  banner.rs  config.rs  cookie_util.rs  cors.rs  error.rs  health.rs  lib.rs  logging.rs  request_id.rs  sanitize.rs  sentry.rs  shutdown.rs  static_files.rs  ulid_id.rs  validate.rs
modo/tests/: app_builder.rs  error_handler_macro.rs  error_handling.rs  handler_macro.rs  health.rs  i18n_integration.rs  i18n_template_integration.rs  integration.rs  middleware_stacking.rs  module_macro.rs  request_id.rs  route_registration.rs  sanitization.rs  sentry_config.rs  service_extractor.rs  sse_broadcast.rs  sse_channel.rs  sse_config.rs  sse_event.rs  sse_last_event_id.rs  sse_response.rs  sse_stream_ext.rs  templates_context_layer.rs  templates_e2e.rs  templates_render_layer.rs  templates_view_macro.rs  templates_view_render_macro.rs  templates_view_renderer.rs  templates_view_response.rs  validation.rs
rskit/: Cargo.toml
rskit/examples/: hello.rs
rskit/src/: app.rs  config.rs  error.rs  lib.rs  router.rs
rskit/tests/: app_builder.rs  error_handling.rs  integration.rs  route_registration.rs  service_extractor.rs  session_integration.rs
(+879 files in other folders)
