[package]
name = "modo-rs"
version = "0.6.1"
edition = "2024"
description = "Rust web framework for small monolithic apps"
license = "Apache-2.0"
repository = "https://github.com/dmitrymomot/modo"
readme = "README.md"
keywords = ["web", "framework", "axum", "sqlite"]
categories = ["web-programming::http-server"]
rust-version = "1.92"
exclude = [".claude", ".claude-plugin", "skills", "docs", ".github", "examples", "CLAUDE.md", "justfile", "tests"]

[lib]
name = "modo"

[features]
default = ["db"]
db = ["dep:libsql", "dep:urlencoding"]
session = ["db"]
job = ["db"]
full = ["db", "session", "job", "templates", "sse", "auth", "sentry", "email", "storage", "webhooks", "dns", "geolocation", "qrcode", "apikey", "text-embedding", "tier"]
tier = []
sentry = ["dep:sentry", "dep:sentry-tracing", "dep:ring"]
templates = ["dep:minijinja", "dep:minijinja-contrib", "dep:intl_pluralrules", "dep:unic-langid"]
sse = ["dep:futures-util"]
auth = [
  "dep:reqwest",
  "dep:ring",
  "dep:argon2",
  "dep:hmac",
  "dep:sha1",
]
email = ["dep:lettre", "dep:pulldown-cmark"]
storage = ["dep:reqwest", "dep:ring", "dep:hmac"]
webhooks = ["dep:reqwest", "dep:ring", "dep:hmac", "dep:base64"]
dns = ["dep:simple-dns"]
apikey = ["db"]
text-embedding = ["dep:reqwest", "dep:ring"]
geolocation = ["dep:maxminddb"]
qrcode = ["dep:fast_qr"]
test-helpers = ["db", "session"]

[dependencies]
# Web
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt", "sync", "time", "net", "signal", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
croner = "3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "compression-full",
  "catch-panic",
  "trace",
  "cors",
  "request-id",
  "set-header",
  "sensitive-headers",
  "fs",
] }

axum-extra = { version = "0.12", features = ["cookie-signed", "cookie-private", "multipart"] }
cookie = { version = "0.18", features = ["signed"] }

# Database (libsql, gated by "db" feature)
libsql = { version = "0.9", optional = true, default-features = false, features = ["core"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
serde_urlencoded = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
regex = "1"
sha2 = "0.11"
ipnet = "2"
bytes = "1"
sentry = { version = "0.47", optional = true, default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
] }
sentry-tracing = { version = "0.47", optional = true }

# Auth (optional, gated by "auth" feature)
argon2 = { version = "0.5", optional = true }
hmac = { version = "0.13", optional = true }
sha1 = { version = "0.11", optional = true }
subtle = "2"
ring = { version = "0.17", optional = true }
reqwest = { version = "0.13.2", optional = true, default-features = false, features = ["rustls", "json", "stream", "form"] }
base64 = { version = "0.22", optional = true }

# Email (optional, gated by "email" feature)
lettre = { version = "0.11", optional = true, default-features = false, features = [
  "smtp-transport",
  "tokio1",
  "builder",
  "hostname",
  "tokio1-rustls",
  "ring",
  "webpki-roots",
] }
pulldown-cmark = { version = "0.13", optional = true }
# Templates (optional, gated by "templates" feature)
minijinja = { version = "2", optional = true, features = ["loader"] }
minijinja-contrib = { version = "2", optional = true }
intl_pluralrules = { version = "7", optional = true }
unic-langid = { version = "0.9", optional = true }

# SSE (optional, gated by "sse" feature)
futures-util = { version = "0.3", optional = true }

# DNS (optional, gated by "dns" feature)
simple-dns = { version = "0.11", optional = true }

# Geolocation (optional, gated by "geolocation" feature)
maxminddb = { version = "0.27", optional = true }

# QR code (optional, gated by "qrcode" feature)
fast_qr = { version = "0.13", optional = true, default-features = false }

# URL encoding (optional, gated by "db" feature)
urlencoding = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serial_test = "3"
