[package]
name = "modo-rs"
version = "0.10.2"
edition = "2024"
description = "Rust web framework for small monolithic apps"
license = "Apache-2.0"
repository = "https://github.com/dmitrymomot/modo"
readme = "README.md"
keywords = ["web", "framework", "axum", "sqlite"]
categories = ["web-programming::http-server"]
rust-version = "1.92"
exclude = [".claude", ".claude-plugin", "skills", "docs", ".github", "examples", "CLAUDE.md", "justfile", "tests"]

[lib]
name = "modo"

[features]
default = []
test-helpers = []

[dependencies]
# Web
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt", "sync", "time", "net", "signal", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
croner = "3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "compression-full",
  "catch-panic",
  "trace",
  "cors",
  "request-id",
  "set-header",
  "sensitive-headers",
  "fs",
  "normalize-path",
] }

axum-extra = { version = "0.12", features = ["cookie-signed", "cookie-private", "multipart"] }
cookie = { version = "0.18", features = ["signed"] }

# Database (libsql)
libsql = { version = "0.9", default-features = false, features = ["core"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
serde_urlencoded = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
regex = "1"
sha2 = "0.11"
ipnet = "2"
bytes = "1"
sentry = { version = "0.47", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
] }
sentry-tracing = "0.47"

# Auth
argon2 = "0.5"
hmac = "0.13"
sha1 = "0.11"
subtle = "2"
ring = "0.17"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream", "form"] }
base64 = "0.22"

# Email
lettre = { version = "0.11", default-features = false, features = [
  "smtp-transport",
  "tokio1",
  "builder",
  "hostname",
  "tokio1-rustls",
  "ring",
  "webpki-roots",
] }
pulldown-cmark = "0.13"
css-inline = { version = "0.16", default-features = false }
# Templates
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = "2"
intl_pluralrules = "7"
unic-langid = "0.9"

# SSE
futures-util = "0.3"

# DNS
simple-dns = "0.11"

# Geolocation
maxminddb = "0.27"

# QR code
fast_qr = { version = "0.13", default-features = false }

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serial_test = "3"
