[package]
name = "modo-auth"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
modo = { path = "../modo" }
modo-session = { path = "../modo-session" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
modo-db = { path = "../modo-db" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
