[package]
name = "modo-auth"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Authentication framework for modo"

[dependencies]
modo = { path = "../modo", version = "0.1.0" }
modo-session = { path = "../modo-session", version = "0.1.0" }
argon2 = "0.5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt"] }

[features]
default = []
templates = ["modo/templates"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_yaml_ng = "0.10"
modo-db = { path = "../modo-db", version = "0.1.0" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
