[package]
name = "modo-cli"
version = "0.1.8"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "CLI tool for scaffolding modo framework projects"

[[bin]]
name = "modo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
minijinja = "2"
include_dir = "0.7"
anyhow = "1"
