[package]
name = "modo-db"
version = "0.1.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Database layer for modo using SeaORM"

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]

[dependencies]
modo = { path = "../modo", version = "0.1.0" }
modo-db-macros = { path = "../modo-db-macros", version = "0.1.1" }

sea-orm = { version = "2.0.0-rc", features = [
    "runtime-tokio-native-tls",
    "macros",
    "schema-sync",
] }

inventory = "0.3"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_yaml_ng = "0.10"
