[package]
name = "modo-db"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Database layer for modo using SeaORM"

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]

[dependencies]
modo.workspace = true
modo-db-macros.workspace = true

sea-orm = { version = "2.0.0-rc", features = [
    "runtime-tokio-native-tls",
    "macros",
    "schema-sync",
] }

inventory.workspace = true
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_yaml_ng.workspace = true
