[package]
name = "modo-email"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["smtp"]
smtp = ["dep:lettre"]
resend = ["dep:reqwest"]

[dependencies]
modo = { path = "../modo" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
async-trait = "0.1"
pulldown-cmark = "0.12"
minijinja = { version = "2", features = ["loader"] }
tracing = "0.1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
