[package]
name = "modo-email"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Email service for modo with SMTP and Resend support"

[features]
default = ["smtp"]
smtp = ["dep:lettre"]
resend = ["dep:reqwest"]

[dependencies]
modo.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng.workspace = true
async-trait.workspace = true
pulldown-cmark = "0.12"
minijinja = { version = "2", features = ["loader"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
mailin-embedded = "0.8"
