[package]
name = "modo-i18n"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
modo = { path = "../modo" }
modo-i18n-macros = { path = "../modo-i18n-macros" }

axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
http = "1"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
