[package]
name = "modo-jobs-macros"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Procedural macros for modo-jobs"

[lib]
proc-macro = true

[dependencies]
cron = "0.15"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
