[package]
name = "modo-jobs"
version = "0.1.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Background jobs and cron scheduling for modo"

[dependencies]
modo = { path = "../modo", version = "0.1.0" }
modo-db = { path = "../modo-db", version = "0.1.1" }
modo-jobs-macros = { path = "../modo-jobs-macros", version = "0.1.0" }

inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
ulid = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_yaml_ng = "0.10"
