[package]
name = "modo-macros"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Procedural macros for the modo web framework"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[features]
default = []
sentry = []
static-embed = []
