[package]
name = "modo-session"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Database-backed session management for modo"

[features]
default = []
cleanup-job = ["dep:modo-jobs"]

[dependencies]
modo = { path = "../modo", version = "0.1.0" }
modo-db = { path = "../modo-db", version = "0.1.0" }
modo-jobs = { path = "../modo-jobs", version = "0.1.0", optional = true }

sha2 = "0.10"
rand = "0.9"
http = "1"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"
ulid = "1"
ipnet = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_yaml_ng = "0.10"
