[package]
name = "modo-session"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Database-backed session management for modo"

[features]
default = []
cleanup-job = ["dep:modo-jobs"]

[dependencies]
modo.workspace = true
modo-db.workspace = true
modo-jobs = { workspace = true, optional = true }

sha2 = "0.10"
rand = "0.9"
http = "1"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"
ulid = "1"
ipnet = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_yaml_ng.workspace = true
