[package]
name = "modo-sqlite"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Pure sqlx SQLite layer for modo with read/write split and embedded migrations"

[dependencies]
modo.workspace = true
modo-sqlite-macros.workspace = true
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
inventory.workspace = true
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_yaml_ng.workspace = true
tempfile = "3"
