[package]
name = "modo-tenant"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Multi-tenancy support for modo"

[dependencies]
http = "1"
modo = { path = "../modo", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
futures-util = "0.3"

[features]
default = []
templates = ["modo/templates"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
serde_json = "1"
