[package]
name = "modo-upload-macros"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Procedural macros for modo-upload"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
modo-upload = { path = "../modo-upload" }
