[package]
name = "modo-upload"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "File upload handling for modo with local and S3 storage"

[features]
default = ["local"]
local = []
opendal = ["dep:opendal"]

[dependencies]
modo = { path = "../modo", version = "0.1.0" }
modo-upload-macros = { path = "../modo-upload-macros", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ["multipart"] }
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
ulid = "1"
opendal = { version = "0.53", optional = true, features = ["services-s3"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
