[package]
name = "modo-upload"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "File upload handling for modo with local and S3 storage"

[features]
default = ["local"]
local = []
opendal = ["dep:opendal"]

[dependencies]
modo.workspace = true
modo-upload-macros.workspace = true
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ["multipart"] }
async-trait.workspace = true
bytes = "1"
futures-util = "0.3"
infer = "0.16"
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
ulid = "1"
opendal = { version = "0.53", optional = true, features = ["services-s3"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
