[package]
name = "modo"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Ergonomic Rust web framework for small monolithic apps"

[dependencies]
modo-macros.workspace = true

# Core
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed", "cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "timeout",
  "limit",
  "compression-full",
  "catch-panic",
  "sensitive-headers",
] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inventory.workspace = true

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# Config
dotenvy = "0.15"
serde_yaml_ng.workspace = true

# Cookies (key derivation)
cookie = { version = "0.18", features = ["key-expansion"] }

# Session IDs and request IDs
ulid = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }

# Templates (optional)
minijinja = { version = "2", features = ["loader"], optional = true }
futures-util = { version = "0.3", optional = true }
http = { version = "1", optional = true }

# CSRF (optional)
rand = { version = "0.9", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2", optional = true }
form_urlencoded = { version = "1", optional = true }

# Static files (optional)
rust-embed = { version = "8", features = ["axum"], optional = true }
mime_guess = { version = "2", optional = true }

[features]
default = []
templates = ["dep:minijinja", "dep:futures-util", "dep:http"]
csrf = ["dep:rand", "dep:hmac", "dep:sha2", "dep:subtle", "dep:form_urlencoded", "dep:http"]
i18n = ["dep:futures-util", "dep:http"]
sse = ["dep:futures-util"]
static-fs = ["tower-http/fs"]
static-embed = ["dep:rust-embed", "dep:mime_guess", "modo-macros/static-embed"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
futures-util = "0.3"
temp-env = "0.3"
