[package]
name = "jobs-example"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
modo = { path = "../../modo" }
modo-db = { path = "../../modo-db", features = ["sqlite"] }
modo-jobs = { path = "../../modo-jobs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = "0.4"
