[package]
name = "jobs-example"
version = "0.1.2"
edition = "2024"
publish = false

[dependencies]
modo.workspace = true
modo-db = { workspace = true, features = ["sqlite"] }
modo-jobs.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = "0.4"

[features]
sentry = ["modo/sentry"]
