[package]
name = "sse-chat"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
modo = { path = "../../modo", features = ["templates", "sse", "csrf", "static-embed"] }
modo-db = { path = "../../modo-db", features = ["sqlite"] }
modo-session = { path = "../../modo-session" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("templates", "sse", "csrf", "static-embed"))'] }
