[package]
name = "sse-chat"
version = "0.1.2"
edition = "2024"
publish = false

[dependencies]
modo = { workspace = true, features = ["templates", "sse", "csrf", "static-embed"] }
modo-db = { workspace = true, features = ["sqlite"] }
modo-session.workspace = true
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("csrf", "sentry", "sse", "static-embed", "templates"))'] }
