[package]
name = "sse-dashboard"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
modo = { workspace = true, features = ["templates", "sse", "static-embed"] }
chrono = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[features]
sentry = ["modo/sentry"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("sse", "static-embed", "templates"))'] }
